--- a/order_index.html
+++ b/order_index.html
@@ -2,9 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Order</title>
 </head>
 <body>
+<div id="head">
+    <img src="" href="#"/>
+    <p>收货人：Chency</p>
+    <p>18646122222</p>
+    <p>收货地址：广东省广州市天河区天河南二路奉行广\n场华兴阁1205</p>
+</div>
 
+<div id="mid_t">
+    <p>try.try太古汇分店</p>
+    <span>客服</span>
+
+    <img src href="#"/>
+    <p>Try女士圆领针织衫</p>
+    <p><span>尺码：M</span><span>颜色：灰色</span><span>品牌：一试</span></p>
+    <p>￥699</p>
+</div>
+<div id="mid_m">
+    <ul>
+        <li><p>配送方式</p><span>自取</span><span>快递</span></li>
+        <li><p>店铺优惠</p><span>全场满500减50 ></span></li>
+        <li><p>优惠金额</p><span>-￥50</span></li>
+    </ul>
+    <p>共一件商品： 小计：<span>￥649</span></p>
+</div>
+
+<div id="mid_b">
+    <p>购物须知</p>
+    <ul>
+        <li><p>购物须知：</p><p>巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉</p></li>
+    </ul>
+</div>
+
+<div id="bottom">
+    <span>总计</span>
+    <span>￥649.00</span>
+    <span>确认订单</span>
+</div>
 </body>
 </html>
