--- a/order_index.html
+++ b/order_index.html
@@ -1,46 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link type="text/css" rel="stylesheet" href="css/index.css"/>
+    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
     <title>Order</title>
 </head>
 <body>
-<div id="head">
-    <img src="" href="#"/>
-    <p>收货人：Chency</p>
-    <p>18646122222</p>
-    <p>收货地址：广东省广州市天河区天河南二路奉行广\n场华兴阁1205</p>
+
+<div id="wrap">
+    <div id="nav"><p>订单确认</p></div>
+    <div id="head">
+        <img src="img/location_icon.png"/>
+        <p><span id="consignee">收货人：Chency</span><span id="phone">18646122222</span></p>
+        <p id="address">收货地址：广东省广州市天河区天河南二路奉行广<br/>场华兴阁1205</p>
+
+    </div>
+
+    <div id="mid_t">
+        <div id="shop_title_box">
+            <p><span id="shop_title">try.try太古汇分店</span><span id="service">客服</span></p>
+        </div>
+        <hr color=#E9E9E9 padd/>
+        <img src="img/location_icon.png" href="#"/>
+        <p><span id="shop">Try女士圆领针织衫</span>
+            <span id="num">x1</span></p>
+
+        <p><span class="grey_s">尺码：M</span><span class="grey_s">颜色：灰色</span><span class="grey_s">品牌：一试</span></p>
+        <p>￥699</p>
+    </div>
+
+    <div id="mid_m">
+        <ul>
+            <li><p>配送方式</p><span>自取</span><span>快递</span></li>
+            <li><p>店铺优惠</p><span>全场满500减50 ></span></li>
+            <li><p>优惠金额</p><span>-￥50</span></li>
+        </ul>
+        <p>共一件商品： 小计：<span>￥649</span></p>
+    </div>
+
+    <div id="mid_b">
+        <p>购物须知</p>
+        <ul>
+            <li><p>购物须知：</p>
+                <p>
+                    巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉</p>
+            </li>
+        </ul>
+    </div>
+
+    <div id="bottom">
+        <span>总计</span>
+        <span>￥649.00</span>
+        <span>确认订单</span>
+    </div>
 </div>
 
-<div id="mid_t">
-    <p>try.try太古汇分店</p>
-    <span>客服</span>
-
-    <img src href="#"/>
-    <p>Try女士圆领针织衫</p>
-    <p><span>尺码：M</span><span>颜色：灰色</span><span>品牌：一试</span></p>
-    <p>￥699</p>
-</div>
-<div id="mid_m">
-    <ul>
-        <li><p>配送方式</p><span>自取</span><span>快递</span></li>
-        <li><p>店铺优惠</p><span>全场满500减50 ></span></li>
-        <li><p>优惠金额</p><span>-￥50</span></li>
-    </ul>
-    <p>共一件商品： 小计：<span>￥649</span></p>
-</div>
-
-<div id="mid_b">
-    <p>购物须知</p>
-    <ul>
-        <li><p>购物须知：</p><p>巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉</p></li>
-    </ul>
-</div>
-
-<div id="bottom">
-    <span>总计</span>
-    <span>￥649.00</span>
-    <span>确认订单</span>
-</div>
 </body>
 </html>
