--- a/order_index.html
+++ b/order_index.html
@@ -11,7 +11,8 @@
 <div id="wrap">
     <div id="nav"><p>订单确认</p></div>
     <div id="head">
-        <img src="img/location_icon.png"/>
+        <img id="location" src="img/location_icon.png"/>
+        <img id="arror" src="img/right_narrow.png">
         <p><span id="consignee">收货人：Chency</span><span id="phone">18646122222</span></p>
         <p id="address">收货地址：广东省广州市天河区天河南二路奉行广<br/>场华兴阁1205</p>
 
@@ -21,21 +22,22 @@
         <div id="shop_title_box">
             <p><span id="shop_title">try.try太古汇分店</span><span id="service">客服</span></p>
         </div>
-        <hr color=#E9E9E9 padd/>
-        <img src="img/location_icon.png" href="#"/>
+        <hr color=#E9E9E9 />
+        <img src="img/photo.png" href="#"/>
         <p><span id="shop">Try女士圆领针织衫</span>
             <span id="num">x1</span></p>
 
-        <p><span class="grey_s">尺码：M</span><span class="grey_s">颜色：灰色</span><span class="grey_s">品牌：一试</span></p>
-        <p>￥699</p>
+        <p id="shop_mid"><span class="grey_s">尺码：M</span><span class="grey_s">颜色：灰色</span><br/><span class="grey_s">品牌：一试</span></p>
+        <p id="shop_bottom">￥699</p>
     </div>
 
     <div id="mid_m">
         <ul>
-            <li><p>配送方式</p><span>自取</span><span>快递</span></li>
-            <li><p>店铺优惠</p><span>全场满500减50 ></span></li>
+            <li><p>配送方式</p><span id="post" class="grey_button">快递</span><span class="pink_button" id="self">自取</span></li>
+            <li><p>店铺优惠</p><img src="img/right_narrow.png"><span id="">全场满500减50 </span></li>
             <li><p>优惠金额</p><span>-￥50</span></li>
         </ul>
+        <hr/>
         <p>共一件商品： 小计：<span>￥649</span></p>
     </div>
 
