finish first page

--- a/order_index.html
+++ b/order_index.html
@@ -22,39 +22,38 @@
         <div id="shop_title_box">
             <p><span id="shop_title">try.try太古汇分店</span><span id="service">客服</span></p>
         </div>
-        <hr color=#E9E9E9 />
+        <hr color=#E9E9E9/>
         <img src="img/photo.png" href="#"/>
         <p><span id="shop">Try女士圆领针织衫</span>
             <span id="num">x1</span></p>
 
-        <p id="shop_mid"><span class="grey_s">尺码：M</span><span class="grey_s">颜色：灰色</span><br/><span class="grey_s">品牌：一试</span></p>
+        <p id="shop_mid"><span class="grey_s">尺码：M</span><span class="grey_s">颜色：灰色</span><br/><span class="grey_s">品牌：一试</span>
+        </p>
         <p id="shop_bottom">￥699</p>
     </div>
 
     <div id="mid_m">
         <ul>
-            <li><p>配送方式</p><span id="post" class="grey_button">快递</span><span class="pink_button" id="self">自取</span></li>
-            <li><p>店铺优惠</p><img src="img/right_narrow.png"><span id="">全场满500减50 </span></li>
-            <li><p>优惠金额</p><span>-￥50</span></li>
+            <li><p>配送方式</p><span id="post" class="grey_button">快递</span><span class="pink_button" id="self">自取</span>
+            </li>
+            <li><p>店铺优惠</p><img id="right_arr" src="img/right_narrow.png"><span id="">全场满500减50 </span></li>
+            <li><p>优惠金额</p><span id="dollar">-￥50</span></li>
         </ul>
         <hr/>
-        <p>共一件商品： 小计：<span>￥649</span></p>
+        <p id="total">共一件商品： 小计：<span>￥649</span></p>
     </div>
 
     <div id="mid_b">
-        <p>购物须知</p>
-        <ul>
-            <li><p>购物须知：</p>
-                <p>
-                    巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉</p>
-            </li>
-        </ul>
+        <p id="text_title">购物须知</p>
+
+        <p class="text_context">◆ 购物须知：</p>
+        <p class="text_context">巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉</p>
     </div>
 
     <div id="bottom">
-        <span>总计</span>
-        <span>￥649.00</span>
-        <span>确认订单</span>
+        <div id="b_left"><p id="b_total">总计</p>
+        <p id="b_money">￥649.00</p></div>
+        <div id="b_right"><span id="b_sure">确认订单</span></div>
     </div>
 </div>
 
