--- a/finalize.html
+++ b/finalize.html
@@ -18,9 +18,35 @@
         <div id="bottom_left"><p>2016/12/11</p></div>
     </div>
     <div id="mid">
-
+        <img src="img/head.png">
+        <div id="mid_m"><p id="c_top">Chency</p><br/>
+            <p id="c_bottom">IEOR京基100 KKmall门店</p></div>
+        <div id="join_btn" class="pink_button">加入购物袋</div>
     </div>
 
+
+    <div id="bottom">
+        <img id="taste" src="img/taste.png"/>
+        <img id="taste_bg" src="img/circle.png"/>
+        <img id="shape_bg" src="img/circle.png"/>
+        <img id="shape" src="img/shape.png"/>
+    </div>
+    <div id="type"><p><span id="taste_t">好品味</span><span id="shape_t">好身材</span></p>
+        <p id="line_bg"><span id="left_white_line"></span><span id="right_pink_line"></span></p>
+        <p id="line_text"><span id="left_text">123</span><span id="right_text">223</span></p>
+    </div>
+    <div id="bottom_group">
+        <img id="bottom_img_left_one" src="img/bottom_head.png"/>
+        <img class="bottom_img_left" src="img/bottom_rabbit.png"/>
+        <img class="bottom_img_left" src="img/bottom_rabbit.png"/>
+
+        <img class="bottom_img_right" src="img/bottom_rabbit.png"/>
+        <img class="bottom_img_right" src="img/bottom_rabbit.png"/>
+        <img class="bottom_img_right" src="img/bottom_rabbit.png"/>
+    </div>
+    <div id="bottom_line">
+        <p><img id="left_sus" src="img/suspension.png"/><img id="right_sus"  src="img/suspension.png"/></p>
+    </div>
 
 </div>
 
